2004-08-27  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-shapes.c: Implemented preserveAspectRatio as per the standard
	* rsvg-shapes.c: Implemented <symbols>s

2004-08-22  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c, rsvg.h, rsvg-private.h: Return metadata to caller if requested
	* rsvg-private.h: Compiler hints to de-bloat the RsvgState struct
	
2004-08-22  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: made <image>s <use>able
	* rsvg.c, rsvg-shapes.c: I've been talking about it for a while now, but I finally got the courage to do it: librsvg now fully passes the contents of the file before it renders a single pixel. 

2004-08-21  Caleb Moore <c.moore@student.unsw.edu.au>

	* prettymuch-everywhere: made the majority compile with -ansi -pedantic
	* rsvg-styles.c: little hack to make background generation for filters 
	work a little better

2004-08-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: Fix memory leak in the new "state stack thingie".
	* rsvg.c: Use a GMemChunk to (marginally) speed up state allocation
	
2004-08-13  Caleb Moore <c.moore@student.unsw.edu.au>

	* prettymuch-everywhere: Huge number of small bugfixes
	* rsvg-styles.c: rewrote the whole state stack thingie

2004-07-23  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c, rsvg-mask.c: ClipPaths now partially working
	* rsvg-shapes.c: now keep a copy of everything in defs.
	* rsvg-styles.c: don't push discrete layers while in defs.
	
2004-07-21  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: Bilinear interpolation for images

2004-07-19  Dom Lachowicz <cinamod@hotmail.com>

	* test-display.c: better scroll policy, especially when used as a plugin
	
2004-07-18  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number (2.7.4)
	* rsvg.1: Add stuff to the man page
	* NEWS: Document newer developments
	
2004-07-19  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: made lighting work much better