@@ -102,6 +102,9 @@ rsvg_css_parse_list(const char * in_str, guint * out_list_len);
 gdouble *
 rsvg_css_parse_number_list(const char * in_str, guint * out_list_len);
 
+gboolean 
+rsvg_css_parse_overflow(const char * str);
+
 G_END_DECLS
 
 #endif /* RSVG_CSS_H */
